--- a/test/test.csproj
+++ b/test/test.csproj
@@ -16,7 +16,7 @@
 
         <ProjectReference Include="../JsonSG/JsonSG.csproj" />
 
-        <!-- <PackageReference Include="Utf8Json" Version="1.3.7" />  -->
+        <PackageReference Include="Utf8Json" Version="1.3.7" />
     </ItemGroup>
 
 </Project>
