--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -10,10 +10,10 @@
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0"/>
-    <ProjectReference Include="../JsonSG.Generator/JsonSG.Generator.csproj" 
+    <ProjectReference Include="../JsonSGen.Generator/JsonSGen.Generator.csproj" 
                         OutputItemType="Analyzer"
                         ReferenceOutputAssembly="false" />
-    <ProjectReference Include="../JsonSG/JsonSG.csproj" />
+    <ProjectReference Include="../JsonSGen/JsonSGen.csproj" />
   </ItemGroup>
 
 </Project>
