--- a/test/test.csproj
+++ b/test/test.csproj
@@ -10,11 +10,11 @@
     <ItemGroup>
         <!-- Note that this is not a "normal" ProjectReference.
             It needs the additional 'OutputItemType' and 'ReferenceOutputAssmbly' attributes. -->
-        <ProjectReference Include="../JsonSG.Generator/JsonSG.Generator.csproj" 
+        <ProjectReference Include="../JsonSGen.Generator/JsonSGen.Generator.csproj" 
                         OutputItemType="Analyzer"
                         ReferenceOutputAssembly="false" />
 
-        <ProjectReference Include="../JsonSG/JsonSG.csproj" />
+        <ProjectReference Include="../JsonSGen/JsonSGen.csproj" />
 
         <PackageReference Include="Utf8Json" Version="1.3.7" />
     </ItemGroup>
