--- a/JsonSGen.Generator/JsonSGen.Generator.csproj
+++ b/JsonSGen.Generator/JsonSGen.Generator.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.0.0-beta2.final" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Include="..\JsonSGen\StringBuilderExtension.cs" Link="StringBuilderExtension.cs" />
+  </ItemGroup>
+
 </Project>
