--- a/JsonSrcGen/JsonSrcGen.csproj
+++ b/JsonSrcGen/JsonSrcGen.csproj
@@ -7,6 +7,7 @@
 
   <PropertyGroup>
     <Version>0.1.0.2</Version>
+    <AssemblyVersion>0.1.0.2</AssemblyVersion>
     <PackageVersion>0.1.0.2-alpha</PackageVersion>
     <PackageId>JsonSrcGen</PackageId>
     <Authors>Daniel Hughes</Authors>
