--- a/JsonSrcGen/JsonSrcGen.csproj
+++ b/JsonSrcGen/JsonSrcGen.csproj
@@ -6,9 +6,9 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>0.1.0.3</Version>
-    <AssemblyVersion>0.1.0.3</AssemblyVersion>
-    <PackageVersion>0.1.0.3-alpha</PackageVersion>
+    <Version>0.1.0.4</Version>
+    <AssemblyVersion>0.1.0.4</AssemblyVersion>
+    <PackageVersion>0.1.0.4-alpha</PackageVersion>
     <PackageId>JsonSrcGen</PackageId>
     <Authors>Daniel Hughes</Authors>
     <Description>
@@ -41,6 +41,11 @@
     <EmbeddedResource Include="..\JsonSrcGen.Inputs\JsonNameAttribute.cs" Link="JsonNameAttribute.cs" />
     <EmbeddedResource Include="..\JsonSrcGen.Inputs\JsonSpanExtensions.cs" Link="JsonSpanExtensions.cs" />
     <EmbeddedResource Include="..\JsonSrcGen.Inputs\StringBuilderExtension.cs" Link="StringBuilderExtension.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="tools\*.ps1" CopyToOutputDirectory="Always" Pack="true" PackagePath="tools" />
+    <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
   </ItemGroup>
 
 </Project>
