--- a/Benchmarks/Benchmarks.csproj
+++ b/Benchmarks/Benchmarks.csproj
@@ -13,13 +13,12 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.12.1.1420" />
+    <PackageReference Include="JsonSrcGen" Version="0.1.0.4-alpha" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Utf8Json" Version="1.3.7" />
-    <!-- <PackageReference Include="JsonSrcGen" Version="0.1.0.2-alpha" 
-        OutputItemType="Analyzer"
-        ReferenceOutputAssembly="false" /> -->
 
-    <ProjectReference Include="../JsonSrcGen/JsonSrcGen.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+
+    <!-- <ProjectReference Include="../JsonSrcGen/JsonSrcGen.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" /> -->
   </ItemGroup>
 
 </Project>
