--- a/Benchmarks/Benchmarks.csproj
+++ b/Benchmarks/Benchmarks.csproj
@@ -13,7 +13,10 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.12.1.1420" />
-    <PackageReference Include="JsonSrcGen" Version="0.1.0.6-alpha" />
+    <PackageReference Include="JsonSrcGen" Version="0.1.0.7-alpha">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Utf8Json" Version="1.3.7" />
   </ItemGroup>
