--- a/JsonSrcGen/JsonSrcGen.csproj
+++ b/JsonSrcGen/JsonSrcGen.csproj
@@ -6,16 +6,16 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>0.1.0.7</Version>
-    <AssemblyVersion>0.1.0.7</AssemblyVersion>
-    <PackageVersion>0.1.0.7-alpha</PackageVersion>
+    <Version>0.2.0.0</Version>
+    <AssemblyVersion>0.2.0.0</AssemblyVersion>
+    <PackageVersion>0.2.0.0-alpha</PackageVersion>
     <PackageId>JsonSrcGen</PackageId>
     <Authors>Daniel Hughes</Authors>
     <Description>
         Json Library that generates serializaton code at compile time using .NET 5 c# Source Generators, 
     </Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Copyright>Copyright (c) Daniel Hughes 2020</Copyright>
+    <Copyright>Copyright © Daniel Hughes 2020</Copyright>
     <PackageProjectUrl>https://github.com/trampster/JsonSrcGen</PackageProjectUrl>
     <RepositoryUrl>https://github.com/trampster/JsonSrcGen</RepositoryUrl>
 
@@ -34,7 +34,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <!-- <Compile Include="..\JsonSrcGen.Inputs\StringBuilderExtension.cs" Link="StringBuilderExtension.cs" /> -->
     <EmbeddedResource Include="..\JsonSrcGen.Inputs\GenerationOutputFolderAttribute.cs" Link="GenerationOutputFolderAttribute.cs" />
     <EmbeddedResource Include="..\JsonSrcGen.Inputs\InvalidJsonException.cs" Link="InvalidJsonException.cs" />
     <EmbeddedResource Include="..\JsonSrcGen.Inputs\JsonArrayAttribute.cs" Link="JsonArrayAttribute.cs" />
