Progress on OPenWeatherMap tests

--- a/RealJsonTests/RealJsonTests.csproj
+++ b/RealJsonTests/RealJsonTests.csproj
@@ -19,6 +19,9 @@
   <ItemGroup>
     <Content Include="SpaceX\*.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="OpenWeatherMap\*.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>  
   </ItemGroup>
 </Project>
