--- a/JsonSrcGen/JsonSrcGen.csproj
+++ b/JsonSrcGen/JsonSrcGen.csproj
@@ -39,6 +39,7 @@
     <EmbeddedResource Include="..\JsonSrcGen.Inputs\JsonArrayAttribute.cs" Link="JsonArrayAttribute.cs" />
     <EmbeddedResource Include="..\JsonSrcGen.Inputs\JsonValueAttribute.cs" Link="JsonValueAttribute.cs" />
     <EmbeddedResource Include="..\JsonSrcGen.Inputs\JsonAttribute.cs" Link="JsonAttribute.cs" />
+    <EmbeddedResource Include="..\JsonSrcGen.Inputs\JsonIgnoreNullAttribute.cs" Link="JsonIgnoreNullAttribute.cs" />
     <EmbeddedResource Include="..\JsonSrcGen.Inputs\JsonDictionaryAttribute.cs" Link="JsonDictionaryAttribute.cs" />
     <EmbeddedResource Include="..\JsonSrcGen.Inputs\JsonIgnoreAttribute.cs" Link="JsonIgnoreAttribute.cs" />
     <EmbeddedResource Include="..\JsonSrcGen.Inputs\JsonListAttribute.cs" Link="JsonListAttribute.cs" />
