--- a/test/test.csproj
+++ b/test/test.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
-        <LangVersion>preview</LangVersion>
+        <LangVersion>9.0</LangVersion>
     </PropertyGroup>
 
     <!-- Add this as a new ItemGroup, replacing paths and names appropriately -->
