--- a/CustomConverterTests/CustomConverterTests.csproj
+++ b/CustomConverterTests/CustomConverterTests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <LangVersion>preview</LangVersion>
+    <LangVersion>9.0</LangVersion>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
