--- a/Samples/CoreRT/CoreRTSample.csproj
+++ b/Samples/CoreRT/CoreRTSample.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <LangVersion>preview</LangVersion>
+    <LangVersion>9.0</LangVersion>
     <IlcDisableReflection>true</IlcDisableReflection>
     <IlcInvariantGlobalization>true</IlcInvariantGlobalization>
   </PropertyGroup>
