--- a/JsonSrcGen/JsonSrcGen.csproj
+++ b/JsonSrcGen/JsonSrcGen.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>1.1.0.0-alpha.1</Version>
-    <AssemblyVersion>1.1.0.0-alpha.1</AssemblyVersion>
+    <Version>1.1.0.0</Version>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
     <PackageVersion>1.1.0.0-alpha.1</PackageVersion>
     <PackageId>JsonSrcGen</PackageId>
     <Authors>Daniel Hughes</Authors>
