--- a/JsonSrcGen.Runtime/JsonSrcGen.Runtime.csproj
+++ b/JsonSrcGen.Runtime/JsonSrcGen.Runtime.csproj
@@ -22,4 +22,8 @@
     <RepositoryUrl>https://github.com/trampster/JsonSrcGen</RepositoryUrl>
     <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+      <None Include="icon.png" Pack="true" PackagePath=""/>
+  </ItemGroup>
 </Project>
