--- a/JsonSrcGen/JsonSrcGen.csproj
+++ b/JsonSrcGen/JsonSrcGen.csproj
@@ -6,19 +6,12 @@
   </PropertyGroup>
 
   <PropertyGroup>
+    <NuspecFile>JsonSrcGen.nuspec</NuspecFile>
+
     <Version>1.1.0.0</Version>
     <AssemblyVersion>1.1.0.0</AssemblyVersion>
     <PackageVersion>1.1.0.0-alpha.1</PackageVersion>
-    <PackageId>JsonSrcGen</PackageId>
-    <Authors>Daniel Hughes</Authors>
-    <Description>
-        Json Library that generates serializaton code at compile time using .NET 5 c# Source Generators, 
-    </Description>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Copyright>Copyright © Daniel Hughes 2020</Copyright>
-    <PackageProjectUrl>https://github.com/trampster/JsonSrcGen</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/trampster/JsonSrcGen</RepositoryUrl>
-    <PackageIcon>icon.png</PackageIcon>
 
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
@@ -59,5 +52,11 @@
     <None Update="tools\*.ps1" CopyToOutputDirectory="Always" Pack="true" PackagePath="tools" />
     <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
   </ItemGroup>
+
+  <Target Name="SetNuspecProperties" BeforeTargets="GenerateNuspec">
+    <PropertyGroup>
+      <NuspecProperties>outputPath=$(OutputPath);version=$(PackageVersion);restEaseVersion=$(VersionPrefix)</NuspecProperties>
+    </PropertyGroup>
+  </Target>
 
 </Project>
