correction in the relative path of the project

--- a/Benchmarks/Benchmarks.csproj
+++ b/Benchmarks/Benchmarks.csproj
@@ -5,6 +5,7 @@
 		<TargetFramework>net5.0</TargetFramework>
 		<Authors>Hugo de Brito V. R. Alves</Authors>
 		<Company>Hugo de Brito V. R. Alves</Company>
+		<Description>Benchmarks</Description>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -33,8 +34,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	 
-	  <ProjectReference Include="..\..\..\..\Fontes\JsonSrcGen\JsonSrcGen\JsonSrcGen.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+	  <ProjectReference Include="..\JsonSrcGen\JsonSrcGen.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 
+	
 </Project>
