* Decimal type added * Project Benchmarks added (with BenchmarkDotNet) * IsNumber: code is more readable and this method is faster than Switch * Contains for AttributeSyntax. Example: [assembly: JsonSrcGen.JsonArray(typeof(int))]
* Update packages
 Microsoft.CodeAnalysis.Analyzers (3.3.1)
        Microsoft.NET.Test.Sdk (16.8.0)

Unit Tests
Outcomes
   347 Passed
   4 Failed (Problem with Local Date (timezone?))
   - Do some testing with internationalization (Example: DecimalPropertyTests)

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@ Generated/Generated.cs
 Generated
 *.log
 BenchmarkDotNet.Artifacts
+/.vs/JsonSrcGen/DesignTimeBuild
+/.vs/JsonSrcGen/v16/TestStore/0
+*.suo
+*.json
+*.sqlite
+*.user
+*.sqlite-journal
