Decimal type added
Project Benchmarks added (with BenchmarkDotNet)

Contains for AttributeSyntax. Example: [assembly: JsonSrcGen.JsonArray(typeof(int))]

Is Number: Details in https://github.com/hugobritobh/BenchmarksNumber

Update packages
Microsoft.CodeAnalysis.Analyzers (3.3.1)
Microsoft.NET.Test.Sdk (16.8.0)
NUnit3TestAdapter" Version (3.17.0)

Unit Tests
Outcomes
347 Passed
4 Failed (It seems that an error occurred just for me, so it could be a time zone)
Do some testing with internationalization (Example: DecimalPropertyTests)

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ Generated/Generated.cs
 Generated
 *.log
 BenchmarkDotNet.Artifacts
+*.suo
+*.sqlite
+*.bak
+*.testlog
+*.manifest
+*.user
+*.v2
+*.json
