--- a/CustomConverterTests/CustomConverterTests.csproj
+++ b/CustomConverterTests/CustomConverterTests.csproj
@@ -9,12 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="NUnit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0"/>
-    <ProjectReference Include="../JsonSrcGen.Runtime/JsonSrcGen.Runtime.csproj" />
-    <ProjectReference Include="../JsonSrcGen/JsonSrcGen.csproj" 
-                        OutputItemType="Analyzer"
-                        ReferenceOutputAssembly="false" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
+    <ProjectReference Include="../JsonSrcGen/JsonSrcGen.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+    <ProjectReference Include="..\JsonSrcGen.Runtime\JsonSrcGen.Runtime.csproj" />
   </ItemGroup>
 
 </Project>
