--- a/JsonSrcGen.Runtime.Tests/JsonSrcGen.Runtime.Tests.csproj
+++ b/JsonSrcGen.Runtime.Tests/JsonSrcGen.Runtime.Tests.csproj
@@ -11,6 +11,10 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0"/>
     <ProjectReference Include="../JsonSrcGen.Runtime/JsonSrcGen.Runtime.csproj" />
+
+	  <ProjectReference Include="../JsonSrcGen/JsonSrcGen.csproj"
+					OutputItemType="Analyzer"
+					ReferenceOutputAssembly="false" />
   </ItemGroup>
 
 </Project>
