--- a/JsonSrcGen/JsonSrcGen.csproj
+++ b/JsonSrcGen/JsonSrcGen.csproj
@@ -10,7 +10,7 @@
 
     <Version>1.1.0.0</Version>
     <AssemblyVersion>1.1.0.0</AssemblyVersion>
-    <PackageVersion>1.1.0.0-alpha.2</PackageVersion>
+    <PackageVersion>1.1.0.0-beta.1</PackageVersion>
     <Copyright>Copyright © Daniel Hughes 2020</Copyright>
 
     <IncludeBuildOutput>false</IncludeBuildOutput>
