--- a/JsonSrcGen/JsonSrcGen.csproj
+++ b/JsonSrcGen/JsonSrcGen.csproj
@@ -10,8 +10,8 @@
 
     <Version>1.1.0.0</Version>
     <AssemblyVersion>1.1.0.0</AssemblyVersion>
-    <PackageVersion>1.1.0.0-beta.1</PackageVersion>
-    <Copyright>Copyright © Daniel Hughes 2020</Copyright>
+    <PackageVersion>1.1.0.0-rc.1</PackageVersion>
+    <Copyright>Copyright © Daniel Hughes 2021</Copyright>
 
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
