Add copy to output for DuckDuckGo Json

--- a/RealJsonTests/RealJsonTests.csproj
+++ b/RealJsonTests/RealJsonTests.csproj
@@ -22,6 +22,9 @@
     </Content>
     <Content Include="OpenWeatherMap\*.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>  
+    </Content>
+    <Content Include="DuckDuckGo\*.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
